# stdlib-extensions

./: .gitignore  LICENSE  pyproject.toml
src/stdlib_extensions/: __init__.py  _shared.py  dataclasses.py  enum.py  functools.py  inspect.py  numbers.py  sys.py  typing.py
src/stdlib_extensions/collections/: __init__.py  _collections.py
src/stdlib_extensions/ext/: subscription.py  tkdialogs.py
